DEV/helloWorld-deploiement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: hello-world
  labels:
    app: hello-world
    tier: devops
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: deployment-test
          image: dockercloud/hello-world
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
