DEV/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: hello-world
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
