DEV/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: hello-world
spec:
  rules:
    - host: hello-world.laura
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
          - path: /lol
            pathType: Prefix
            backend:
              service:
                name: service-lol
                port:
                  number: 8080
